画像拡大パネルの実装
+ 画像右クリックで表示、右クリック+ホイールの操作と競合しないように
+ 拡大時に隙間ができないように、Grid線の太さも拡大する仕様にした
+ 再生中に出した時は表示終了後レジューム
+ ファイル詳細も左上に表示。表示切り替えも可能に

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -85,6 +85,7 @@
       <DependentUpon>TileExpantionPanel.xaml</DependentUpon>
     </Compile>
     <Compile Include="UIHelper.cs" />
+    <Compile Include="VisualTreeUtil.cs" />
     <Compile Include="Win32.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -144,6 +145,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -219,6 +221,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\slide_top_orange.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\info.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
