拡大パネルではチェック柄が反映されていない問題を修正
Utilクラスを作成し、CreatePlaidBrush()メソッドを移動した

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -85,6 +85,7 @@
       <DependentUpon>TileExpantionPanel.xaml</DependentUpon>
     </Compile>
     <Compile Include="UIHelper.cs" />
+    <Compile Include="Util.cs" />
     <Compile Include="VisualTreeUtil.cs" />
     <Compile Include="Win32.cs" />
     <Page Include="MainWindow.xaml">
