画像ロード時に、読み込み中であることを示すメッセージを表示
VSを通して実行しても、レンダリング更新がうまくいかない。exeを直で実行してテストする必要あり

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -62,6 +62,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AppSetting.cs" />
+    <Compile Include="ExtensionMethods.cs" />
     <Compile Include="ImageFileInfo.cs" />
     <Compile Include="MainWindow_Event.cs" />
     <Compile Include="MatrixSelecter.xaml.cs">
