とりあえずプロファイルの作成と読み込みだけできるように
xmlファイル保存、作成後の編集機能、ツールチップ表示、などはまだ
ファイルパスが同じでも、同じファイルを無駄に読み込んでしまう問題がある

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -90,6 +90,7 @@
     <Compile Include="ProfileEditDialog.xaml.cs">
       <DependentUpon>ProfileEditDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ProfileEnabledMember.cs" />
     <Compile Include="SettingDialog.xaml.cs">
       <DependentUpon>SettingDialog.xaml</DependentUpon>
     </Compile>
