フォルダ(書庫)履歴の設定ダイアログを作成
+ 開いたフォルダ(書庫)の履歴を保存する
+ 付随して保存する情報(5項目)
+ 保存する履歴の上限数
+ 新たにフォルダ（書庫）を開いた時、それが履歴にあるなら、その履歴情報の設定を適用する
+ メニューに表示する履歴の上限数
+ ○個以上履歴がある場合、サブメニューに表示
+ 履歴を削除する(ボタン)

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -81,6 +81,9 @@
     <Compile Include="Comparer.cs" />
     <Compile Include="ExifInfo.cs" />
     <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="GlobalSettingDialog.xaml.cs">
+      <DependentUpon>GlobalSettingDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ImageFileInfo.cs" />
     <Compile Include="MainWindow_Event.cs" />
     <Compile Include="MatrixSelecter.xaml.cs">
@@ -118,6 +121,10 @@
     <Compile Include="WpfTreeUtil.cs" />
     <Compile Include="Win32.cs" />
     <Page Include="CommonControl\ColorPickerButton.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="GlobalSettingDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
