プリセットプロファイルの実装

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -89,6 +89,7 @@
     <Compile Include="MatrixSelecter.xaml.cs">
       <DependentUpon>MatrixSelecter.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PresetProfile.cs" />
     <Compile Include="Profile.cs" />
     <Compile Include="ProfileEditDialog.xaml.cs">
       <DependentUpon>ProfileEditDialog.xaml</DependentUpon>
