拡大パネル下部にボタンを色々設置
+ ファイル情報の表示/非表示
+ エクスプローラーで開く
+ クリップボードへコピー(ファイル、画像、パス、ファイル名)
+ 外部プログラムで開く(ダイアログで設定可能)

ファイル情報はカーソル位置により自動で隠れる仕様を辞めた
フォルダ履歴コンテキストメニューを少し変更(エクスプローラーでフォルダを開く仕様を統一)

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -290,7 +290,12 @@
   <ItemGroup>
     <Resource Include="Resources\profile.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\copy.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\open.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
