左クリック押しながら、他のマウスボタン押下のショートカットを可能にした
Window.DragMove() だと、マウス左ボタン離して移動完了するまで、あらゆるマウスイベントが飛んでこなくなってしまうので、やめた。
WindowDragMoveクラスを作成して、融通が効くようにした。

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -162,6 +162,7 @@
     </Compile>
     <Compile Include="UserProfileInfo.cs" />
     <Compile Include="Util.cs" />
+    <Compile Include="WindowDragMove.cs" />
     <Compile Include="WpfTreeUtil.cs" />
     <Compile Include="Win32.cs" />
     <Page Include="CommonControl\ColorPickerButton.xaml">
