--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Shortcut\KeyInput.cs" />
     <Compile Include="Shortcut\Command\ZoomInImage.cs" />
     <Compile Include="Shortcut\MouseGesture.cs" />
+    <Compile Include="Shortcut\MouseGestureInput.cs" />
     <Compile Include="Shortcut\MouseInput.cs" />
     <Compile Include="Shortcut\Scene.cs" />
     <Compile Include="Shortcut\ShortcutManager.cs" />
