コマンドに値を設定出来るようにした
ショートカットのマッピング管理の方法を根本的に変えた
コマンドIDを主体に、3つの入力方法とコマンドの値をマッピングするクラスに変更した

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -88,9 +88,7 @@
     <Compile Include="Archiver\RarArchiver.cs" />
     <Compile Include="Archiver\SharpCompressArchiver.cs" />
     <Compile Include="Archiver\ZipArchiver.cs" />
-    <Compile Include="Setting\MouseGestureMap.cs" />
-    <Compile Include="Setting\MouseInputMap.cs" />
-    <Compile Include="Setting\KeyMap.cs" />
+    <Compile Include="Setting\CommandMap.cs" />
     <Compile Include="Setting\ShortcutSetting.cs" />
     <Compile Include="Shortcut\CommandID.cs" />
     <Compile Include="Shortcut\Command\SlideToBottom.cs" />
