コンテキストメニューの実装

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -91,6 +91,9 @@
     <Compile Include="Setting\CommandMap.cs" />
     <Compile Include="Setting\ShortcutSetting.cs" />
     <Compile Include="Shortcut\CommandID.cs" />
+    <Compile Include="Shortcut\Command\ShiftBackward.cs" />
+    <Compile Include="Shortcut\Command\ShiftForward.cs" />
+    <Compile Include="Shortcut\Command\ShowContextMenu.cs" />
     <Compile Include="Shortcut\Command\LoadProfileFromName.cs" />
     <Compile Include="Shortcut\Command\LoadProfileFromNum.cs" />
     <Compile Include="Shortcut\Command\SlideToBottom.cs" />
