設定読み込みと保存のタイミングを、Appクラス作成時と破棄時に変更

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Setting\CommandMap.cs" />
     <Compile Include="Setting\ShortcutSetting.cs" />
     <Compile Include="Shortcut\CommandID.cs" />
+    <Compile Include="Shortcut\Command\ShowAppSettingDialog.cs" />
     <Compile Include="Shortcut\Command\ShiftBackward.cs" />
     <Compile Include="Shortcut\Command\ShiftForward.cs" />
     <Compile Include="Shortcut\Command\ShowContextMenu.cs" />
