外部プログラムを複数設定出来るようにした

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Setting\CommandMap.cs" />
     <Compile Include="Setting\ShortcutSetting.cs" />
     <Compile Include="Shortcut\CommandID.cs" />
+    <Compile Include="Shortcut\Command\OpenImageUnderCursorByDefaultApp.cs" />
     <Compile Include="Shortcut\Command\ShowAppSettingDialog.cs" />
     <Compile Include="Shortcut\Command\ShiftBackward.cs" />
     <Compile Include="Shortcut\Command\ShiftForward.cs" />
@@ -101,6 +102,7 @@
     <Compile Include="Shortcut\Command\SlideToTop.cs" />
     <Compile Include="Shortcut\Command\SlideToRight.cs" />
     <Compile Include="Shortcut\Command\SlideToLeft.cs" />
+    <Compile Include="Shortcut\Command\OpenImageUnderCursorByExternalApp.cs" />
     <Compile Include="Shortcut\Command\ZoomImageUnderCurosr.cs" />
     <Compile Include="Shortcut\Command\WindowSizeDown.cs" />
     <Compile Include="Shortcut\Command\WindowSizeUp.cs" />
