--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -98,6 +98,8 @@
     <Compile Include="Shortcut\Command\ShowContextMenu.cs" />
     <Compile Include="Shortcut\Command\LoadProfileFromName.cs" />
     <Compile Include="Shortcut\Command\LoadProfileFromNum.cs" />
+    <Compile Include="Shortcut\Command\SlideToCursorDirectionRev.cs" />
+    <Compile Include="Shortcut\Command\SlideToCursorDirection.cs" />
     <Compile Include="Shortcut\Command\SlideToBottom.cs" />
     <Compile Include="Shortcut\Command\SlideToTop.cs" />
     <Compile Include="Shortcut\Command\SlideToRight.cs" />
