ウインドウスナップ機能の実装

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -175,6 +175,7 @@
     <Compile Include="UserProfileInfo.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="WindowDragMove.cs" />
+    <Compile Include="WindowSnap.cs" />
     <Compile Include="WpfTreeUtil.cs" />
     <Compile Include="Win32.cs" />
     <Page Include="CommonControl\ColorPickerButton.xaml">
