コマンド追加

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -91,6 +91,31 @@
     <Compile Include="Setting\CommandMap.cs" />
     <Compile Include="Setting\ShortcutSetting.cs" />
     <Compile Include="Shortcut\CommandID.cs" />
+    <Compile Include="Shortcut\Command\ToggleSlideShowPlay.cs" />
+    <Compile Include="Shortcut\Command\CopyImageFileNameUnderCursor.cs" />
+    <Compile Include="Shortcut\Command\CopyImageFilePathUnderCursor.cs" />
+    <Compile Include="Shortcut\Command\CopyImageDataUnderCursor.cs" />
+    <Compile Include="Shortcut\Command\CopyImageFileUnderCursor.cs" />
+    <Compile Include="Shortcut\Command\MoveZoomImageToBottom.cs" />
+    <Compile Include="Shortcut\Command\MoveZoomImageToTop.cs" />
+    <Compile Include="Shortcut\Command\MoveZoomImageToRight.cs" />
+    <Compile Include="Shortcut\Command\OpenFolderByExplorer.cs" />
+    <Compile Include="Shortcut\Command\OpenImageUnderCursorByExplorer.cs" />
+    <Compile Include="Shortcut\Command\ToggleDisplayOfFileInfo.cs" />
+    <Compile Include="Shortcut\Command\ChangeNumOfRow.cs" />
+    <Compile Include="Shortcut\Command\ChangeNumOfColumn.cs" />
+    <Compile Include="Shortcut\Command\ReduceRow.cs" />
+    <Compile Include="Shortcut\Command\ReduceColumn.cs" />
+    <Compile Include="Shortcut\Command\AddRow.cs" />
+    <Compile Include="Shortcut\Command\AddColumn.cs" />
+    <Compile Include="Shortcut\Command\ChangeSlideDirectionToRev.cs" />
+    <Compile Include="Shortcut\Command\ChangeSlideDirectionToBottom.cs" />
+    <Compile Include="Shortcut\Command\ChangeSlideDirectionToRight.cs" />
+    <Compile Include="Shortcut\Command\ChangeSlideDirectionToTop.cs" />
+    <Compile Include="Shortcut\Command\ChangeSlideDirectionToLeft.cs" />
+    <Compile Include="Shortcut\Command\ToggleFullScreen.cs" />
+    <Compile Include="Shortcut\Command\ToggleTopMost.cs" />
+    <Compile Include="Shortcut\Command\ExitApp.cs" />
     <Compile Include="Shortcut\Command\OpenImageUnderCursorByDefaultApp.cs" />
     <Compile Include="Shortcut\Command\ShowAppSettingDialog.cs" />
     <Compile Include="Shortcut\Command\ShiftBackward.cs" />
@@ -118,6 +143,8 @@
     <Compile Include="Shortcut\Command\OpenFolder.cs" />
     <Compile Include="Shortcut\Command\Null.cs" />
     <Compile Include="Shortcut\Command\ExitZoom.cs" />
+    <Compile Include="Shortcut\Command\MoveZoomImageToLeft.cs" />
+    <Compile Include="Shortcut\Command\ZoomReset.cs" />
     <Compile Include="Shortcut\Command\ZoomOutImage.cs" />
     <Compile Include="Shortcut\ICommand.cs" />
     <Compile Include="CommonControl\ColorPickerButton.xaml.cs">
