コンテキストメニュー調整
外部プログラムの項目をなるべく近い位置に
「エクスプローラーで開く」は固定ではなく、外部連携のデフォルト設定の１項目にした
引数内のパスの書式を定数定義した

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -82,6 +82,7 @@
     <Compile Include="CommonControl\NotificationBlock.xaml.cs">
       <DependentUpon>NotificationBlock.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Format.cs" />
     <Compile Include="MessageBoxEx.cs" />
     <Compile Include="Setting\AppSetting.cs" />
     <Compile Include="Archiver\ArchiverBase.cs" />
