--- a/C-SlideShow/packages.config
+++ b/C-SlideShow/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="PdfiumViewer" version="2.13.0.0" targetFramework="net452" />
+  <package id="PdfiumViewer.Native.x86.no_v8-no_xfa" version="2018.4.8.256" targetFramework="net452" />
+  <package id="PdfiumViewer.Native.x86_64.no_v8-no_xfa" version="2018.4.8.256" targetFramework="net452" />
   <package id="SharpCompress" version="0.21.1" targetFramework="net452" />
   <package id="WpfAnimatedGif" version="1.4.17" targetFramework="net452" />
 </packages>
