--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -116,6 +116,8 @@
     <Compile Include="Setting\ShortcutSetting.cs" />
     <Compile Include="Shortcut\CommandFactory.cs" />
     <Compile Include="Shortcut\CommandID.cs" />
+    <Compile Include="Shortcut\Command\ReduceColumnAndRow.cs" />
+    <Compile Include="Shortcut\Command\AddColumnAndRow.cs" />
     <Compile Include="Shortcut\Command\OpenPrevArchiver.cs" />
     <Compile Include="Shortcut\Command\OpenNextArchiver.cs" />
     <Compile Include="Shortcut\Command\OepnSubMenu_AspectRatio.cs" />
