拡大表示中、拡大率が1.0より大きければ、ドラッグ操作で画像を移動できるようにした

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Shortcut\Command\MoveZoomImageToLeft.cs" />
     <Compile Include="Shortcut\Command\ZoomReset.cs" />
     <Compile Include="Shortcut\Command\ZoomOutImage.cs" />
+    <Compile Include="Shortcut\Drag\TileExpantionPanelDragMove.cs" />
     <Compile Include="Shortcut\ICommand.cs" />
     <Compile Include="CommonControl\ColorPickerButton.xaml.cs">
       <DependentUpon>ColorPickerButton.xaml</DependentUpon>
