--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -116,6 +116,8 @@
     <Compile Include="Setting\ShortcutSetting.cs" />
     <Compile Include="Shortcut\CommandFactory.cs" />
     <Compile Include="Shortcut\CommandID.cs" />
+    <Compile Include="Shortcut\Command\GoToBackwardImage.cs" />
+    <Compile Include="Shortcut\Command\GoToForwardImage.cs" />
     <Compile Include="Shortcut\Command\MinimizeWindow.cs" />
     <Compile Include="Shortcut\Command\CloseFile.cs" />
     <Compile Include="Shortcut\Command\ReduceColumnAndRow.cs" />
